# gameOfLife

./: .gitignore  CMakeLists.txt  Life.cpp  Life.h  life_tets.cpp  main.cpp
libraries/arm64/macOS/: SDL_mixer.dylib
life_backend/: CMakeLists.txt  Life.cpp  Life.h
life_frontend/: CMakeLists.txt  Info.plist  info.desktop.in  info.rc  life_frontend.cpp  life_frontend.h  variables.h  variables.h.in
life_test/: CMakeLists.txt  life_tets.cpp
